--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -135,3 +135,10 @@ watchfiles==1.1.1
 websockets==15.0.1
 yarl==1.22.0
 zipp==3.23.0
+dropbox==12.0.2
+gitpython==3.1.43
+google-auth==2.36.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+google-api-python-client==2.155.0
+webdavclient3==3.14.6
