--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-
 APScheduler==3.11.2
 Jinja2==3.1.6
 MarkupSafe==3.0.3
@@ -39,7 +38,6 @@ gitpython==3.1.43
 google-ai-generativelanguage==0.6.15
 google-api-core==2.29.0
 google-api-python-client==2.188.0
-google-auth==2.47.0
 google-auth-httplib2==0.3.0
 google-auth-oauthlib==1.2.1
 google-genai==1.59.0
@@ -140,3 +138,7 @@ webdavclient3==3.14.6
 websockets==15.0.1
 yarl==1.22.0
 zipp==3.23.0
+google-auth>=2.47.0
+pyotp==2.9.0
+qrcode==7.4.2
+Pillow==10.2.0
