--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,3 @@
-APScheduler==3.11.2
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-PyJWT==2.10.1
-PyYAML==6.0.3
-Pygments==2.19.2
 aiofiles==25.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
@@ -11,6 +5,7 @@ aiosignal==1.4.0
 aiosmtplib==5.1.0
 annotated-types==0.7.0
 anyio==4.12.1
+APScheduler==3.11.2
 attrs==25.4.0
 bcrypt==4.1.3
 beautifulsoup4==4.14.3
@@ -22,9 +17,9 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.3
+defusedxml==0.7.1
 distro==1.9.0
 dnspython==2.8.0
-dropbox==12.0.2
 ecdsa==0.19.1
 email-validator==2.3.0
 emergentintegrations==0.1.0
@@ -32,14 +27,15 @@ fastapi==0.115.6
 fastuuid==0.14.0
 filelock==3.20.3
 flake8==7.3.0
+fonttools==4.61.1
+fpdf2==2.8.5
 frozenlist==1.8.0
 fsspec==2026.1.0
-gitpython==3.1.43
 google-ai-generativelanguage==0.6.15
 google-api-core==2.29.0
 google-api-python-client==2.188.0
+google-auth==2.47.0
 google-auth-httplib2==0.3.0
-google-auth-oauthlib==1.2.1
 google-genai==1.59.0
 google-generativeai==0.8.6
 googleapis-common-protos==1.72.0
@@ -56,6 +52,7 @@ idna==3.11
 importlib_metadata==8.7.1
 iniconfig==2.3.0
 isort==7.0.0
+Jinja2==3.1.6
 jiter==0.12.0
 jmespath==1.0.1
 jq==1.10.0
@@ -65,6 +62,7 @@ librt==0.7.8
 litellm==1.80.0
 lxml==6.0.2
 markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 mccabe==0.7.0
 mdurl==0.1.2
 motor==3.6.0
@@ -79,13 +77,12 @@ pandas==2.3.3
 passlib==1.7.4
 pathspec==1.0.3
 paypalrestsdk==1.13.3
-pillow==12.1.0
+pillow==10.2.0
 platformdirs==4.5.1
 pluggy==1.6.0
 propcache==0.4.1
 proto-plus==1.27.0
 protobuf==5.29.5
-pyOpenSSL==25.3.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycodestyle==2.14.0
@@ -93,8 +90,14 @@ pycparser==2.23
 pydantic==2.10.3
 pydantic_core==2.27.1
 pyflakes==3.4.0
+Pygments==2.19.2
+PyJWT==2.10.1
 pymongo==4.9.2
+pyOpenSSL==25.3.0
+pyotp==2.9.0
 pyparsing==3.3.1
+PyPDF2==3.0.1
+pypng==0.20220715.0
 pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -102,6 +105,8 @@ python-jose==3.5.0
 python-multipart==0.0.20
 pytokens==0.3.0
 pytz==2025.2
+PyYAML==6.0.3
+qrcode==7.4.2
 referencing==0.37.0
 regex==2026.1.15
 reportlab==4.4.9
@@ -134,10 +139,6 @@ urllib3==2.6.3
 uvicorn==0.34.0
 uvloop==0.22.1
 watchfiles==1.1.1
-webdavclient3==3.14.6
 websockets==15.0.1
 yarl==1.22.0
 zipp==3.23.0
-google-auth>=2.47.0
-pyotp==2.9.0
-qrcode==7.4.2
